--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
             </div>
         </section>
-        <!-- Clients-->
+        <!-- Patients-->
         <div class="py-5">
             <div class="container">
                 <div class="row align-items-center">
@@ -344,7 +344,7 @@
                                     <p>Dental implants are replacement tooth roots. Implants provide a strong foundation for fixed (permanent) or removable replacement teeth that are made to match your natural teeth.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Patient:</strong>
                                             In most cases, anyone healthy enough to undergo a routine dental extraction or oral surgery can be considered for a dental implant.
                                         </li>
                                         <li>
@@ -379,7 +379,7 @@
                                     <p>Dental Stemm Cells can be used to treat various spine and orthopedic conditions, cardiovascular diseases and may also be useful in plastic surgery.They can also be used to treat neuronal degenerative disorders such as Parkinson's disease, cerebral palsy, Alzheimer's disease, and other such disorders.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Clients:</strong>
+                                            <strong>Patients:</strong>
                                             Children between 0-12 years old as well as adults under 30 years of age if teeth are being extracted for orthodontic purposes.
                                         </li>
                                         <li>
@@ -414,7 +414,7 @@
                                     <p>Use this area to describe your project. A Brighter Dental Experienced</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Patient:</strong>
                                             Finish
                                         </li>
                                         <li>
@@ -449,7 +449,7 @@
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Patient:</strong>
                                             Lines
                                         </li>
                                         <li>
@@ -484,7 +484,7 @@
                                     <p>When a tooth has become so damaged that a filling, cap or crown will not suffice, you may require complete removal of the tooth (a tooth extraction).</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Patient:</strong>
                                             Everyone having followinf reasons:-pain, abscess, tooth decay, gum disease, prosthetics, to correct irregular teeth, remove extra teeth or to make space, cosmetic
                                         </li>
                                         <li>
@@ -519,7 +519,7 @@
                                     <p>Consult from our professionals about the services offered by the Blanco Dental Clinic, starting from the smallest dental interventions to the most complicated ones.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Patient:</strong>
                                             Anyone who needs the services of doctors specialized in the field of implantology and aesthetic orthodontics and more.
                                         </li>
                                         <li>
