--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <h4 class="subheading">Location</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Skelë, pranë Bar Piazza, Kati I
-							</p>Rruga Çamëria, Vlorë 9401, Albania</p></div>
+							</p><a href="https://goo.gl/maps/jdSLWWdyarSYPUnR6">Rruga Çamëria, Vlorë 9401, Albania</a>.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -174,7 +174,7 @@
                                 <h4>Phone Number</h4>
                                 <h4 class="subheading">WhatsApp</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Call us or send a WhatsApp message</p>+355 69 654 0020</p></div>
+                            <div class="timeline-body"><p class="text-muted">Call us or send a WhatsApp message</p><a href="https://wa.me/355696540020?text=l%20am%20interested%20in%20your%20services">+355 69 654 0020</a>.</p></div>
                         </div>
                     </li>
                     
@@ -316,9 +316,9 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; Blanco Dental Valona 2022</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/blancodental.valona" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        
                     </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
@@ -338,7 +338,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">PDental Implants</h2>
+                                    <h2 class="text-uppercase">Dental Implants</h2>
                                     <p class="item-intro text-muted">BLANCO DENTAL - Amici del Sorriso</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
                                     <p>Dental implants are replacement tooth roots. Implants provide a strong foundation for fixed (permanent) or removable replacement teeth that are made to match your natural teeth.</p>
